phase-5/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: eck
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: kibana.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obs-kb-http
                port:
                  number: 5601
